# missile-toad

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Pipfile  README.md  justfile
cmake/: compiler.cmake  dependencies.cmake  options.cmake
docs/: Building.md  Doxyfile  SpriteAnimation.md  architecture.md  conf.py  diagram-ecs.mermaid  diagram.mermaid  diagram.plantuml  index.rst  uml.rst
missile_toad/: .clang-tidy  CMakeLists.txt  main.cpp
missile_toad/cmake/: add_system.cmake  components.cmake  system_component_registry.cmake  systems.cmake
missile_toad/include/missile_toad/: base_system.hpp  common.hpp  game.hpp
missile_toad/include/missile_toad/core/: asset_manager.hpp  base_system.hpp  common.hpp  core_components.hpp  game.hpp  game_descriptor.hpp  input_manager.hpp  ldtk_loader.hpp  locator.hpp  music.hpp  music_loader.hpp  resource_ptr.hpp  scene.hpp  scene_descriptor.hpp  scene_manager.hpp  schema_includes.hpp  texture.hpp  texture_loader.hpp  timer.hpp
missile_toad/include/missile_toad/core/components/: audio.component.hpp  box_collider_2d.component.hpp  camera_2d.component.hpp  collision2d.component.hpp  physics_2d.component.hpp  rigidbody_2d.component.hpp  sprite.component.hpp  sprite_animation.component.hpp  transform.component.hpp
missile_toad/include/missile_toad/core/systems/: audio.system.hpp  physics.system.hpp  renderer.system.hpp  sprite_animation.system.hpp
missile_toad/include/missile_toad/game/components/: player.component.hpp
missile_toad/include/missile_toad/game/systems/: hub.system.hpp  laboratory.system.hpp  menu.system.hpp  player.system.hpp
missile_toad/include/missile_toad/systems/: my_system.system.hpp
missile_toad/src/: dummy.cpp  game.cpp  main.cpp
missile_toad/src/core/: asset_manager.cpp  common.cpp  game.cpp  game_descriptor.cpp  input_manager.cpp  ldtk_loader.cpp  music.cpp  music_loader.cpp  resource_ptr.cpp  scene.cpp  scene_descriptor.cpp  scene_manager.cpp  texture.cpp  texture_loader.cpp  timer.cpp
missile_toad/src/core/components/: audio.component.cpp  box_collider_2d.component.cpp  camera_2d.component.cpp  collision2d.component.cpp  physics_2d.component.cpp  rigidbody_2d.component.cpp  sprite.component.cpp  sprite_animation.component.cpp  transform.component.cpp
missile_toad/src/core/systems/: audio.system.cpp  physics.system.cpp  renderer.system.cpp  sprite_animation.system.cpp
missile_toad/src/game/components/: player.component.cpp
missile_toad/src/game/systems/: hub.system.cpp  laboratory.system.cpp  menu.system.cpp  player.system.cpp
missile_toad/src/systems/: my_system.system.cpp
src/missile_engine/: CMakeLists.txt  main.cpp
src/missile_engine/cmake/: components.cmake  systems.cmake
src/missile_engine/include/missile_engine/: asset_manager.hpp  base_system.hpp  common.hpp  core_components.hpp  entity_builder.hpp  game.hpp  game_descriptor.hpp  input_manager.hpp  ldtk_loader.hpp  locator.hpp  movie.hpp  movie_loader.hpp  music.hpp  music_loader.hpp  physics_utils.hpp  scene.hpp  scene_descriptor.hpp  scene_manager.hpp  schema_includes.hpp  texture.hpp  texture_loader.hpp  timer.hpp
src/missile_engine/include/missile_engine/components/: audio.component.hpp  box_collider_2d.component.hpp  camera_2d.component.hpp  circle_collider_2d.component.hpp  collision2d.component.hpp  disabled.component.hpp  line_renderer.component.hpp  movie_player.component.hpp  rigidbody_2d.component.hpp  sprite.component.hpp  sprite_animation.component.hpp  tag.component.hpp  transform.component.hpp
src/missile_engine/include/missile_engine/systems/: audio.system.hpp  movie_player.system.hpp  physics.system.hpp  renderer.system.hpp  sprite_animation.system.hpp
src/missile_engine/src/: asset_manager.cpp  common.cpp  game.cpp  game_descriptor.cpp  game_register.cpp  input_manager.cpp  ldtk_loader.cpp  movie.cpp  movie_loader.cpp  music.cpp  music_loader.cpp  physics_utils.cpp  scene.cpp  scene_descriptor.cpp  scene_manager.cpp  texture.cpp  texture_loader.cpp  timer.cpp
src/missile_engine/src/components/: audio.component.cpp  box_collider_2d.component.cpp  camera_2d.component.cpp  circle_collider_2d.component.cpp  collision2d.component.cpp  disabled.component.cpp  line_renderer.component.cpp  movie_player.component.cpp  rigidbody_2d.component.cpp  sprite.component.cpp  sprite_animation.component.cpp  tag.component.cpp  transform.component.cpp
src/missile_engine/src/systems/: audio.system.cpp  movie_player.system.cpp  physics.system.cpp  renderer.system.cpp  sprite_animation.system.cpp
src/missile_toad/: .clang-tidy  CMakeLists.txt
src/missile_toad/cmake/: components.cmake  systems.cmake
src/missile_toad/include/missile_toad/: bullet_utils.hpp  enemy_utils.hpp
src/missile_toad/include/missile_toad/components/: better_camera.component.hpp  bullet.component.hpp  caracool.component.hpp  dialog.component.hpp  experimento_m.component.hpp  health.component.hpp  king_mecha_rat.component.hpp  mecha_mosca.component.hpp  player.component.hpp  turret.component.hpp
src/missile_toad/include/missile_toad/systems/: bullet.system.hpp  camera.system.hpp  enemy.system.hpp  health.system.hpp  hub.system.hpp  laboratory.system.hpp  main_menu.system.hpp  menu.system.hpp  player.system.hpp  turret.system.hpp
src/missile_toad/src/: bullet_utils.cpp  enemy_utils.cpp
src/missile_toad/src/components/: better_camera.component.cpp  bullet.component.cpp  caracool.component.cpp  dialog.component.cpp  experimento_m.component.cpp  health.component.cpp  king_mecha_rat.component.cpp  mecha_mosca.component.cpp  player.component.cpp  turret.component.cpp
src/missile_toad/src/systems/: bullet.system.cpp  camera.system.cpp  enemy.system.cpp  health.system.cpp  hub.system.cpp  laboratory.system.cpp  main_menu.system.cpp  menu.system.cpp  player.system.cpp  turret.system.cpp
tests/: .clang-tidy  CMakeLists.txt
tests/src/: dummy.cpp
tests/src/core/: dummy.cpp  game_descriptor.cpp  locator.cpp  meta_loader.cpp  physics.cpp  resource_ptr.cpp  sprite_animation_component.cpp  timer.cpp
(+16 files in other folders)
